kubernetes/apps/storage/minio/app/httproute-console.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: minio
    gethomepage.dev/title: Minio
    gethomepage.dev/description: "Object storage console"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/pod-selector: "app=minio,release=minio"
spec:
  hostnames:
    - minio.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: minio-console
          namespace: storage
          port: 9001
